css/style.css
/* ... */
		#bootstrapOverrides .tweet{
			width: calc(45vw - 15vh);
			overflow: hidden;
			color: #000;
			position: absolute;
			left: 15vh;
			height: 13.5vh;
			font-size: 2.5vh;
			padding-left: 0.5vw;
			padding-right: 0.5vw;
			padding-top: 4vh;
		}

			#bootstrapOverrides .act{
				position: absolute;
				right: 5%;
				bottom: 5%;
			}

		#bootstrapOverrides .timePosted{
			width: 8vw;
			overflow: hidden;
			color: #000;
			position: absolute;
			top: 2.5vh;
			bottom: 2.5vh;
			right: 0;
			height: 10vh;
			font-size: 2.2vh;
			padding: 5px;
			border-left: 1px dashed black
		}





	.ttt{
		border-color: #000;
		background-color: #000;
		border-radius: 5px;
		overflow: hidden;
	}

	.ttt iframe{
		border-color: #000;
		height: 98%;
		width: 98%;
	}

	.projectInfo{
		margin-top: 10px;
		padding: 5px;
		background-color: rgba(0, 0, 0, 0.7);
		border-radius: 5px;
	}
		
		#bootstrapOverrides .wide{
			width: 39.5vw;
			height: auto;
			margin-right: 1vw;
		}

		#bootstrapOverrides .narrow{
			width: 19vw;
			height: auto;
		}

		.links{
			font-size: 1.5em;
		}

		.projectInfo p{
			padding: 5px;
		}

		#bootstrapOverrides .panel {
		  background-color: transparent;
		  border-color: #fff;
		  border-radius: 0;
		}
		
		#bootstrapOverrides .panel-group {
		  word-wrap: break-word;
		}
		
		#bootstrapOverrides .panel-group .panel:first-child {
		  border-radius: 6px 6px 0 0;
		}
		
		#bootstrapOverrides .panel-group .panel:last-child {
		  border-radius: 0 0 6px 6px;
		}
		
		#bootstrapOverrides .panel-group .panel + .panel {
		  margin-top: 0;
		}
		
		#bootstrapOverrides .panel-group i,
		#bootstrapOverrides .panel-group .panel-body {
		  transition-duration: 200ms;
		}
		
		.down {
		  -webkit-transform: rotate(90deg);
		  -moz-transform: rotate(90deg);
		}
		
		#bootstrapOverrides .panel-default > .panel-heading {
		  background-color: transparent;
		}
		
		#bootstrapOverrides .well {
		  display: inline-block;
		  text-align: left;
		  padding-left: 15px;
		  font-family: courier;
		  min-width: 40%;
		  max-width: 100%;
		  overflow: auto;
		  position: relative;
		  margin: auto;
		  margin-top: 10px;
		  margin-bottom: 10px;
		  background-color: rgba(255, 255, 255, 0.95);
		  color: #837489;
		  word-wrap: normal;
		}

		/*Well code colors.*/
		.bl {color: #028AE3;} .gr {color: #00D79B;} .pr {color: #D500FA;} .yw {color: #FAB000;} .dk {color: #020B22;} .or {color: #FFB400;} .lb {color: #72C0BA;}
		
		.tab {
			margin-left: 25px;
		}
		
		.code {
		  font-family: courier;
		  color: #E9674B;
		}





@media (max-width: 800px){
	.projectSlides{
		width: 100vw;
		top: 10vh;
		bottom: 10vh;
		height: calc(42vw + 18vh);
		left: 0;
		border-radius: 0;
	}

	.slider{
		width: 100vw;
		left: 0;
		padding-bottom: 10vh;
	}

		.slide{
			width: 100vw;
			left: 0;
			padding-top: 3vh;
		}

		.slide p{
			top: 1vh;
		}

		.slider-nav{
			left: 0;
			width: 100vw;
			bottom: -1vh;
		}
			.arrow-prev {
				font-size: 2vh;
			}

			.arrow-next {
				font-size: 2vh;
			}

				.slider-dots{
					margin-top: 2vh;
					bottom: 3.5vh;
				}

				.slider-dots li {
					font-size: 7vh;
				}

	.textArea p{
		font-size: 1.5em;
	}

	#contactForm{
		min-height: 330px;
	}

	.contactLeft{
		width: 100%;
		top: 0;
	}

	.contactRight{
		width: 100%;
		bottom: 70px;
		max-height: 40%;
	}

	input{
		width: 80%;
		margin-left: 0;
	}

	textarea{
		width: 80%;
		height: 23vh;
	}

	#navigation-table{
		bottom: -140px;
		width: 30vw;
		left: 30vw;
	}

	.infoIcon{
		font-size: 2em;
	}

	/*Projects Page.*/
	#bootstrapOverrides .tweets li, #bootstrapOverrides .user, #bootstrapOverrides .tweet{
		height: 10vh;
	}

	#bootstrapOverrides .user{
		width: 10vh;
	}

	#bootstrapOverrides .twitter{
		left: 11vh;
		font-size: 1.7vh;
	}

	#bootstrapOverrides .tweet{
		left: 10vh;
		width: calc(46vw - 10vh);
		font-size: 2vh;
		padding-top: 2.7vh;
	}

	#bootstrapOverrides .act{
		font-size: 1.5vh;
	}

	#bootstrapOverrides .timePosted{
		height: 8vh;
		width: 9vw;
		top: 1vh;
		font-size: 1.2vh;
	}
}

@media (max-width: 768px){
	#bootstrapOverrides .navbar-collapse{
		border-color: #0BB4CE;
	}

	#bootstrapOverrides .nav li{
		width: 100vw;
	}

	#bootstrapOverrides .dropdown-menu{
		border-top: 1px dashed #E1B62F;
		border-bottom: 1px dashed #E1B62F;
	}

	#bootstrapOverrides .projects .nav{
		height: 60px;
	}

	#bootstrapOverrides .projects .nav li{
		display: inline-block;
		float: left;
		height: 100%
	}

	#bootstrapOverrides .projects .navbar{
		position: relative;
		margin: 0 auto;
	}

	#bootstrapOverrides .projects .navbar-nav{
		display: none;
	}

	.narrow-nav{
		display: block;
	}

	#bootstrapOverrides .nav>li>a:focus, #bootstrapOverrides .nav>li>a:hover{
		display: block;
		background-color: #000;
	}

	.narrow-nav>li>a>i{
		padding-top: 8px;
		font-size: 25px;
	}
}

@media (max-width: 550px){
	.ss-q-item-label, .instructions{
		font-size: 1.1em;
	}

	input, textarea{
		width: 70%;
	}

	.infoIcon{
		width: 45%;
		height: 40vh;
		top: 10vh;
		margin-top: 2vh;
	}

	.projects{
		width: 365vw;
	}


	.projectDetails{
		width: 90vw;
		padding-left: 5.8vw;
		margin-bottom: 0;
	}

	#mismatch{
		margin-left: 0;
	}

		.projectDetails img, .ttt, #bootstrapOverrides .tweets{
			height: 51.4vw;
			max-height: 50vh;
			width: 84.2vw;
			border-radius: 5px;
		}
		
		#bootstrapOverrides .wide{
			width: 100%;
			height: auto;
			margin-bottom: 10px;
		}

		#bootstrapOverrides .narrow{
			width: 100%;
			height: auto;
		}

	#bootstrapOverrides #timeline{
		left: 2vw;
		top: 0;
		bottom: calc((4.5vw - 20px)/2);
		height: 41vw;
		width: 80vw;
	}

	#bootstrapOverrides .tweets ul{
		height: 39vw;
		width: 78vw;
	}

	#bootstrapOverrides .tweets li{
		width: 78vw;
	}

	#bootstrapOverrides .twitter{
		left: 11vh;
		width: 54vw;
	}

	#bootstrapOverrides .tweet{
		left: 10vh;
		width: 54vw;
		padding-left: 1vw;
		padding-right: 1vw;
	}
}
/* ... */

